# ChangeLog for x11-drivers/xf86-video-via
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-via/Attic/ChangeLog,v 1.8 2005/11/11 19:16:24 joshuabaergen Exp $

*xf86-video-via-0.1.32 (11 Nov 2005)

  11 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-via-0.1.32.ebuild:
  Bump for 7.0RC2.

  05 Nov 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xf86-video-via-0.1.31.1-r1.ebuild:
  Add >=x11-libs/libdrm-1.0.5 to DEPEND. Reported 20051104 by Michał Pytasz
  on the dri-devel list.

*xf86-video-via-0.1.31.1-r1 (27 Oct 2005)

  27 Oct 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/VIAVidAdjustFrame_fix.patch, +xf86-video-via-0.1.31.1-r1.ebuild:
  Added patch to fix unresolved symbols in driver.  Thanks again to Tony Murray
  in bug #110175.

  27 Oct 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  xf86-video-via-0.1.31.1.ebuild:
  Added dep on x11-libs/libXvMC (Tony Murray).

*xf86-video-via-0.1.31.1 (20 Oct 2005)

  20 Oct 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-via-0.1.31.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

*xf86-video-via-0.1.31 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/xf86xvpriv.patch, +xf86-video-via-0.1.31.ebuild:
  Initial commit for modular X.
