@@ -1,12 +1,14 @@
-MD5 98388e97679bd2a2ad5547a8141e9720 ChangeLog 1411
+MD5 82a7cf5e09189722858dd69bb811e86b ChangeLog 1631
 MD5 a9b5405956ad3bcd0b82c54087a2caee files/VIAVidAdjustFrame_fix.patch 483
 MD5 99dbc6d3bd0e4c3d071d8af726d5642f files/digest-xf86-video-via-0.1.31 74
 MD5 e1d571d072db1e9cf3b3f20bcf6f951a files/digest-xf86-video-via-0.1.31.1 76
 MD5 e1d571d072db1e9cf3b3f20bcf6f951a files/digest-xf86-video-via-0.1.31.1-r1 76
 MD5 f8b9708ab24e5df390a1e776ffd5b94c files/digest-xf86-video-via-0.1.32 74
+MD5 6b4cbe842325511ca9a2092f15006113 files/digest-xf86-video-via-0.1.32_p20051115 84
 MD5 d41d8cd98f00b204e9800998ecf8427e files/xf86xvpriv.patch 0
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 MD5 0569c6278371015d9d7f004f8d2fe8fd xf86-video-via-0.1.31.1-r1.ebuild 766
 MD5 0648fbca4061cd274b0b2bea0f033509 xf86-video-via-0.1.31.1.ebuild 730
 MD5 c167046ef413a2691e60878388aec90e xf86-video-via-0.1.31.ebuild 705
 MD5 56ceba4d7e8a66f250d13698b4d41f4d xf86-video-via-0.1.32.ebuild 726
+MD5 634d70c931dbe1d6486f4e8da0b311e2 xf86-video-via-0.1.32_p20051115.ebuild 796
