@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-via
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-via/Attic/ChangeLog,v 1.8 2005/11/11 19:16:24 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-via/Attic/ChangeLog,v 1.9 2005/11/16 05:17:05 joshuabaergen Exp $
+
+*xf86-video-via-0.1.32_p20051115 (16 Nov 2005)
+
+  16 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org>
+  +xf86-video-via-0.1.32_p20051115.ebuild:
+  New snapshot to fix bug #112503, including a patch by Cedric Berger.
 
 *xf86-video-via-0.1.32 (11 Nov 2005)
 
